--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">    
     <title>Curriculum</title>
 </head>
@@ -13,8 +14,19 @@
         <img src="img/foto_v1.jpg">
     </header>
     <main>
-
-
+        <section class="seccion">
+            <div class="icons">
+                <i class='bx bxl-facebook'></i>
+                <i class='bx bxl-twitter'></i> 
+                <i class='bx bxl-linkedin-square'></i> 
+                <i class='bx bxl-github'></i> 
+            </div>
+            <article>Desarrollador web full stack con mas de 3 años de experiencia, un sólido conocimiento en tecnologías back-end utilizando como lenguaje principal PHP y su repsectivo framework Laravel. Mi experiencia me permite crear aplicaciones web funcionales, eficientes y atractivas, con un enfoque creativo. Siempre estoy buscando mejorar mis habilidades y mantenerme actualizado en las últimas tendencias tecnológicas en el mundo del desarrollo web.</article>
+            <div class="btns">
+                <button>DESCARGAR CV</button>
+                <button>CONTACTO</button>  
+            </div>
+        </section>
     </main>
 </body>
 </html>
