--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="style.css">
     <title>Curriculum</title>
 </head>
+
 <body>
     <header class="header">
         <h1>Oscar Alejandro Guerrero</h1>
@@ -17,16 +19,70 @@
         <section class="seccion">
             <div class="icons">
                 <i class='bx bxl-facebook'></i>
-                <i class='bx bxl-twitter'></i> 
-                <i class='bx bxl-linkedin-square'></i> 
-                <i class='bx bxl-github'></i> 
+                <i class='bx bxl-twitter'></i>
+                <i class='bx bxl-linkedin-square'></i>
+                <i class='bx bxl-github'></i>
             </div>
-            <article>Desarrollador web full stack con mas de 3 años de experiencia, un sólido conocimiento en tecnologías back-end utilizando como lenguaje principal PHP y su repsectivo framework Laravel. Mi experiencia me permite crear aplicaciones web funcionales, eficientes y atractivas, con un enfoque creativo. Siempre estoy buscando mejorar mis habilidades y mantenerme actualizado en las últimas tendencias tecnológicas en el mundo del desarrollo web.</article>
+            <article>Desarrollador web full stack con mas de 3 años de experiencia, un sólido conocimiento en
+                tecnologías back-end utilizando como lenguaje principal PHP y su repsectivo framework Laravel. Mi
+                experiencia me permite crear aplicaciones web funcionales, eficientes y atractivas, con un enfoque
+                creativo. Siempre estoy buscando mejorar mis habilidades y mantenerme actualizado en las últimas
+                tendencias tecnológicas en el mundo del desarrollo web.</article>
             <div class="btns">
                 <button>DESCARGAR CV</button>
-                <button>CONTACTO</button>  
+                <button>CONTACTO</button>
+            </div>
+        </section>
+        <section class="experience">
+            <h2>EXPERIENCE</h2>
+            <div class="container-experience">
+                <div class="separador-uno">
+                    <div class="elements">
+                        <h3>Chief Project Manager</h3>
+                        <div class="extra-information">
+                            <p class="title">Lorem ipsum dolor sit amet.</p>
+                            <p class="date">Enero del 2023 - Mayo 15</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit culpa, quas
+                                dolore velit reiciendis nulla asperiores recusandae voluptate vel repudiandae?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="elements">
+                        <h3>Senior UX/UI Designer</h3>
+                        <div class="extra-information">
+                            <p class="title">Lorem ipsum dolor sit amet.</p>
+                            <p class="date">Enero del 2023 - Mayo 15</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit culpa, quas
+                                dolore velit reiciendis nulla asperiores recusandae voluptate vel repudiandae?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="separador-dos">
+                    <div class="elements">
+                        <h3>Chief Project Manager</h3>
+                        <div class="extra-information">
+                            <p class="title">Lorem ipsum dolor sit amet.</p>
+                            <p class="date">Enero del 2023 - Mayo 15</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit culpa, quas
+                                dolore velit reiciendis nulla asperiores recusandae voluptate vel repudiandae?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="elements">
+                        <h3>Senior UX/UI Designer</h3>
+                        <div class="extra-information">
+                            <p class="title">Lorem ipsum dolor sit amet.</p>
+                            <p class="date">Enero del 2023 - Mayo 15</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit culpa, quas
+                                dolore velit reiciendis nulla asperiores recusandae voluptate vel repudiandae?
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
 </body>
+
 </html>
